# Student_Portal

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
notes_app/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
notes_app/migrations/: 0001_initial.py  0002_alter_note_content.py  0003_alter_note_content.py
notes_app/static/css/: styles.css
notes_app/templates/notes_app/: base.html  note_confirm_delete.html  note_detail.html  note_form.html  note_list.html
notes_project/: settings.py  urls.py
