[project]
name = "djproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "django-tinymce>=5.0.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.3.1",
    "djangorestframework-simplejwt>=5.3.1",
    "django-extensions",
    "pydotplus",
]
